dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/Practice_Efficiency_Review__c.object-meta.xml
<CustomObject>
    <description>Practice Efficiency Review - UKIHARM-68</description>
    <label>Practice Efficiency ReviewOLD</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Practice Efficiency Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>