dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Alt_Contact__c.field-meta.xml
<CustomField>
    <fullName>Alt_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Alternative Contact as additional contact</description>
    <inlineHelpText>Alternative Contact as additional contact</inlineHelpText>
    <label>Alternative Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Practice Efficiency Reviews (Alternative Contact)</relationshipLabel>
    <relationshipName>Practice_Efficiency_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>