dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Bank_Feeds_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Bank_Feeds_Capacity__c</fullName>
    <description>Of the clients you deal with that do not have feeds set up, what % do you believe you could put bank feeds in place for?</description>
    <inlineHelpText>Of the clients you deal with that do not have feeds set up, what % do you believe you could put bank feeds in place for?</inlineHelpText>
    <label>Percentage of Clients</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>