dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Bank_Feeds_Stopper__c.field-meta.xml
<CustomField>
    <fullName>Bank_Feeds_Stopper__c</fullName>
    <description>What stops getting the bank feeds set up?</description>
    <inlineHelpText>What stops getting the bank feeds set up?</inlineHelpText>
    <label>Bank Feeds Stopper</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LackTime</fullName>
                <label>Lack of time</label>
            </value>
            <value>
                <fullName>ClientsDontDoOnlineBanking</fullName>
                <label>Clients don&apos;t do online banking</label>
            </value>
            <value>
                <fullName>BanksNotCompatible</fullName>
                <label>Banks not compatible</label>
            </value>
            <value>
                <fullName>ClientsUnwillingConnect</fullName>
                <label>Clients unwilling to connect</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>