dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Bank_Feeds_Stopper_Other__c.field-meta.xml
<CustomField>
    <fullName>Bank_Feeds_Stopper_Other__c</fullName>
    <description>Please state what other reason that your client stops getting the bank feeds set up? e.g. Lack of time,  clients don&apos;t do online banking, banks not compatible, clients unwilling to connect, other please state   [up to 50 characters]</description>
    <inlineHelpText>Please state what other reason that your client stops getting the bank feeds set up? e.g. Lack of time,  clients don&apos;t do online banking, banks not compatible, clients unwilling to connect, other please state   [up to 50 characters]</inlineHelpText>
    <label>Bank Feeds Stopper(Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>