dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Bankfeeds__c.field-meta.xml
<CustomField>
    <fullName>Bankfeeds__c</fullName>
    <description>Do you have bank feeds set up for clients? [select one of dropdown values]</description>
    <inlineHelpText>Do you have bank feeds set up for clients? [select one of dropdown values]</inlineHelpText>
    <label>Bank Feeds?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>