dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/BankFeeds_Percentage_Clients__c.field-meta.xml
<CustomField>
    <fullName>BankFeeds_Percentage_Clients__c</fullName>
    <description>What percentage (scale 0-100) of your clients have the bank feeds setup?</description>
    <inlineHelpText>What percentage (scale 0-100) of your clients have the bank feeds setup?</inlineHelpText>
    <label>If Yes is selected, what percentage?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>