dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/BlankLine__c.field-meta.xml
<CustomField>
    <fullName>BlankLine__c</fullName>
    <label>.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>