dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Clients_Migrate_to_Client_Management__c.field-meta.xml
<CustomField>
    <fullName>Clients_Migrate_to_Client_Management__c</fullName>
    <description>How many clients could you migrate to client management? [up to 5 digits]</description>
    <inlineHelpText>How many clients could you migrate to client management? [up to 5 digits]</inlineHelpText>
    <label># Clients Migrate to Client Management</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>