dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contact_Notes__c</fullName>
    <description>Contain the additional information about selected contact   [up to 255 characters]</description>
    <inlineHelpText>Contain the additional information about selected contact   [up to 255 characters]</inlineHelpText>
    <label>Contact Notes</label>
    <type>TextArea</type>
</CustomField>