dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/CurrencyVisible__c.field-meta.xml
<CustomField>
    <fullName>CurrencyVisible__c</fullName>
    <description>Set Currency to no visibility all the time.</description>
    <formula>false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set Currency to no visibility all the time.</inlineHelpText>
    <label>CurrencyVisible</label>
    <type>Checkbox</type>
</CustomField>