dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <description>Please provide any additional feedback [up to 50 characters].</description>
    <inlineHelpText>Please provide any additional feedback [up to 50 characters].</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>