dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Hours_Per_Client__c.field-meta.xml
<CustomField>
    <fullName>Hours_Per_Client__c</fullName>
    <description>How much time on average do you spend obtaining, chasing and processing the manual records per client per year? (hours)  [up to 5 digits]</description>
    <inlineHelpText>How much time on average do you spend obtaining, chasing and processing the manual records per client per year? (hours) [up to 5 digits]</inlineHelpText>
    <label>Hours Per Client</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>