dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <description>Only allow to Edit when the survey is still in the current fiscal year (Oct 1st to Sept 30)</description>
    <formula>IF(ISNULL(CreatedDate),true,
OR(
DATEVALUE(CreatedDate) &gt; DATE(
IF(
MONTH(TODAY())&gt;=10,
Year(TODAY())+1,
Year(TODAY())
)
, 09, 30)
,
DATEVALUE(CreatedDate) &lt;
DATE(
IF(
MONTH(TODAY())&lt;10,
Year(TODAY())-1,
Year(TODAY())
)
, 10, 01)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Only allow to Edit when the survey is still in the current fiscal year (Oct 1st to Sept 30).</inlineHelpText>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>