dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Number_Of_Clients_Service_Tax__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Clients_Service_Tax__c</fullName>
    <description>How many clients do you provide the following services to Tax? [up to 5 digits]</description>
    <inlineHelpText>How many clients do you provide the following services to Tax? [up to 5 digits]</inlineHelpText>
    <label>Tax</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>