dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Payroll_Bureau_Service_Online__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Bureau_Service_Online__c</fullName>
    <description>Of the clients that you provide the payroll bureau service to, what percentage do you believe could be delivered online (% scale 0-100 of payroll clients)?</description>
    <inlineHelpText>Of the clients that you provide the payroll bureau service to, what percentage do you believe could be delivered online (% scale 0-100 of payroll clients)?</inlineHelpText>
    <label>Percentage of Service Online</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>