dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Payroll_Director__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Director__c</fullName>
    <description>What percentage of your payroll is director only(% scale 0-100)?</description>
    <inlineHelpText>What percentage of your payroll is director only(% scale 0-100)?</inlineHelpText>
    <label>Percentage are director</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>