dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Payroll_Distribute_Info_Total__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Distribute_Info_Total__c</fullName>
    <description>Question 19: Total of Percentage of all distribute documents and reports to employers and employees options should be less than or equal to 100%.</description>
    <formula>Payroll_Distribute_Info_Email__c  +  Payroll_Distribute_Info_Post__c + Payroll_Distribute_Info_Portal__c +  Payroll_Distribute_Info_3rd_Party__c + Payroll_Distribute_Info_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Question 19: Total of Percentage of all distribute documents and reports to employers and employees options should be less than or equal to 100%.</inlineHelpText>
    <label>----- Total of Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>