dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Payroll_Payment_Processing__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Payment_Processing__c</fullName>
    <description>Do you do payroll payment processing to your clients and their employees? [select one of dropdown values]</description>
    <inlineHelpText>Do you do payroll payment processing to your clients and their employees? [select one of dropdown values]</inlineHelpText>
    <label>Payment Processing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YesForSomeOfMyClients</fullName>
                <label>Yes, for some of my clients</label>
            </value>
            <value>
                <fullName>YesForAllOfMyClients</fullName>
                <label>Yes, for all of my clients</label>
            </value>
            <value>
                <fullName>YesOnlyIfRequested</fullName>
                <label>Yes, only if requested</label>
            </value>
            <value>
                <fullName>NoNotInterested</fullName>
                <label>No, not interested</label>
            </value>
            <value>
                <fullName>NoButWouldBeInterested</fullName>
                <label>No, but would be interested</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>