dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Payroll_Processing_Weekly__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Processing_Weekly__c</fullName>
    <description>What percentage of the remaining clients you process payroll for are weekly (% scale 0-100)?</description>
    <inlineHelpText>What percentage of the remaining clients you process payroll for are weekly (% scale 0-100)?</inlineHelpText>
    <label>Percentage per Week</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>