dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Payroll_Receive_Info_3rd_Party__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Receive_Info_3rd_Party__c</fullName>
    <description>How do you receive information for processing in payroll via Thrid Party (% scale 0-100)?</description>
    <inlineHelpText>How do you receive information for processing in payroll via Thrid Party (% scale 0-100)?</inlineHelpText>
    <label>3rd Party</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>