dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Payroll_Receive_Info_Other_Text__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Receive_Info_Other_Text__c</fullName>
    <description>How do you receive information for processing in payroll?  [up to 50 characters]</description>
    <inlineHelpText>How do you receive information for processing in payroll?  [up to 50 characters]</inlineHelpText>
    <label>Notes</label>
    <length>50</length>
    <type>Text</type>
</CustomField>