dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Payroll_Receive_Info_Post__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Receive_Info_Post__c</fullName>
    <description>How do you receive information for processing in payroll via Post/Manual [% scale 0-100]?</description>
    <inlineHelpText>How do you receive information for processing in payroll via Post/Manual [% scale 0-100]?</inlineHelpText>
    <label>Post/Manual</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>