dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Payroll_Receive_Info_Total__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Receive_Info_Total__c</fullName>
    <description>Question 17: Total of Percentage of all receive information for processing in payroll options should be less than or equal to 100%.</description>
    <formula>Payroll_Receive_Info_Post__c + Payroll_Receive_Info_Email__c +   Payroll_Receive_Info_3rd_Party__c + Payroll_Receive_Info_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Question 17: Total of Percentage of all receive information for processing in payroll options should be less than or equal to 100%.</inlineHelpText>
    <label>----- Total of Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>