dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Payslips_Distribute_Email__c.field-meta.xml
<CustomField>
    <fullName>Payslips_Distribute_Email__c</fullName>
    <description>How do you distribute payslips via Email (% scale 0-100)?</description>
    <inlineHelpText>How do you distribute payslips via Email (% scale 0-100)?</inlineHelpText>
    <label>Email</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>