dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Payslips_Distribute_Other__c.field-meta.xml
<CustomField>
    <fullName>Payslips_Distribute_Other__c</fullName>
    <description>How do you distribute payslips via Other (% scale 0-100)?</description>
    <inlineHelpText>How do you distribute payslips via Other (% scale 0-100)?</inlineHelpText>
    <label>Other</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>