dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Payslips_Distribute_Other_Text__c.field-meta.xml
<CustomField>
    <fullName>Payslips_Distribute_Other_Text__c</fullName>
    <description>How do you distribute payslips?   [up to 50 characters]</description>
    <inlineHelpText>How do you distribute payslips?   [up to 50 characters]</inlineHelpText>
    <label>Notes</label>
    <length>50</length>
    <type>Text</type>
</CustomField>