dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Payslips_Distribute_Portal__c.field-meta.xml
<CustomField>
    <fullName>Payslips_Distribute_Portal__c</fullName>
    <description>How do you distribute payslips via Our Portal [% scale 0-100]?</description>
    <inlineHelpText>How do you distribute payslips via Our Portal [% scale 0-100]?</inlineHelpText>
    <label>Our Portal</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>