dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Payslips_Distribute_Total__c.field-meta.xml
<CustomField>
    <fullName>Payslips_Distribute_Total__c</fullName>
    <description>Question 18: Total of Percentage of all distribute payslips options should be less than or equal 100%</description>
    <formula>Payslips_Distribute_Email__c +  Payslips_Distribute_Post__c   + Payslips_Distribute_Portal__c  +  Payslips_Distribute_3rd_Party__c  +  Payslips_Distribute_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Question 18: Total of Percentage of all distribute payslips options should be less than or equal 100%</inlineHelpText>
    <label>----- Total of Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>