dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/PER_Account__c.field-meta.xml
<CustomField>
    <fullName>PER_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Look up an Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Practice Efficiency Reviews</relationshipLabel>
    <relationshipName>Accountant_Business_Reviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>