dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/PER_Contact__c.field-meta.xml
<CustomField>
    <fullName>PER_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Contact who conduct the survey</description>
    <inlineHelpText>The Contact who conduct the survey</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Practice Efficiency Reviews</relationshipLabel>
    <relationshipName>Accountant_Business_Reviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>