dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Percentage_Difficulty_Paper_Records__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Difficulty_Paper_Records__c</fullName>
    <description>How difficult is it to obtain these records from your clients (100% being difficult) - Paper Records? [% scale 0-100]</description>
    <inlineHelpText>How difficult is it to obtain these records from your clients (100% being difficult) - Paper Records? [% scale 0-100]</inlineHelpText>
    <label>Paper Records</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>