dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Percentage_Process_Paper_Based__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Process_Paper_Based__c</fullName>
    <description>How many clients provide you with paper-based records to process eg bank statements? [% scale 0-100]</description>
    <inlineHelpText>How many clients provide you with paper-based records to process eg bank statements? [% scale 0-100]</inlineHelpText>
    <label>Percentage Process Paper Based</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>