dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Percentage_Receive_Log_Into_Software__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Receive_Log_Into_Software__c</fullName>
    <description>How do you receive accounts &amp; tax information/records from clients via Log into their software? [% scale 0-100]</description>
    <inlineHelpText>How do you receive accounts &amp; tax information/records from clients via Log into their software? [% scale 0-100]</inlineHelpText>
    <label>Log Into Software</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>