dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Percentage_Receive_Paper_Records__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Receive_Paper_Records__c</fullName>
    <description>How do you receive accounts &amp; tax information/records from clients via Paper Records? [% scale 0-100]</description>
    <inlineHelpText>How do you receive accounts &amp; tax information/records from clients via Paper Records? [% scale 0-100]</inlineHelpText>
    <label>Paper Records</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>