dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Percentage_Receive_Spreadsheet__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Receive_Spreadsheet__c</fullName>
    <description>How do you receive accounts &amp; tax information/records from clients via Spreadsheet? [% scale 0-100]</description>
    <inlineHelpText>How do you receive accounts &amp; tax information/records from clients via Spreadsheet? [% scale 0-100]</inlineHelpText>
    <label>Spreadsheet</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>