dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Percentage_Using_Software_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Using_Software_Accounts__c</fullName>
    <description>How many of these clients are on software Accounts? [% scale 0-100]</description>
    <inlineHelpText>How many of these clients are on software Accounts? [% scale 0-100]</inlineHelpText>
    <label>Accounts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>