dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Percentage_Would_Software_Bookkeeping__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Would_Software_Bookkeeping__c</fullName>
    <description>How many clients who are not on software would you like to be using software Bookkeeping? [% scale 0-100]</description>
    <inlineHelpText>How many clients who are not on software would you like to be using software Bookkeeping? [% scale 0-100]</inlineHelpText>
    <label>Bookkeeping</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>