dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Software_Accounts_Production__c.field-meta.xml
<CustomField>
    <fullName>Software_Accounts_Production__c</fullName>
    <description>What software used across the practice of Accounts Production? e.g. Sage, Digita, BTC, PTP, CCH, FreeAgent, IRIS, Capium, Taxfiler, TaxCalc, HMRC, Xero, Other (please state)    [up to 50 characters]</description>
    <inlineHelpText>What software used across the practice of Accounts Production? e.g. Sage, Digita, BTC, PTP, CCH, FreeAgent, IRIS, Capium, Taxfiler, TaxCalc, HMRC, Xero, Other (please state)   [up to 50 characters]</inlineHelpText>
    <label>Accounts Production(Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>